server API post

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -51,7 +51,7 @@
             const operazioneSelezionata = operazione.value;
 
             // Simuliamo l'invio della richiesta a un'API (qui utilizziamo un'API fittizia)
-            fetch('/3245-maldifassi-spaoperazion-tcmwylaaear.ws-eu116.gitpod.io/calcola', {
+            fetch('https://3245-maldifassi-spaoperazion-qmcs12k66ff.ws-eu116.gitpod.io/calcola', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
